PI_Programming_Files_PI_GCS2_DLL/PI_GCS2.cs


        /////////////////////////////////////////////////////////////////////////////
        // String commands.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GcsCommandset")]    public static extern int GcsCommandset(int ID, string sCommand);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GcsGetAnswer")]     public static extern int GcsGetAnswer(int ID, StringBuilder sAnswer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GcsGetAnswerSize")] public static extern int GcsGetAnswerSize(int ID, ref int iAnswerSize);


        /////////////////////////////////////////////////////////////////////////////
        // limits.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTMN")]          public static extern int qTMN(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTMX")]          public static extern int qTMX(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_NLM")]           public static extern int NLM(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qNLM")]          public static extern int qNLM(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_PLM")]           public static extern int PLM(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qPLM")]          public static extern int qPLM(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SSL")]           public static extern int SSL(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSSL")]          public static extern int qSSL(int ID, string sAxes, int[] bValueArray);


        /////////////////////////////////////////////////////////////////////////////
        // Wave commands.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IsGeneratorRunning")] public static extern int IsGeneratorRunning(int ID, int[] iWaveGeneratorIds, int[] bValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTWG")]          public static extern int qTWG(int ID, ref int iWaveGenerators);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WAV_SIN_P")]     public static extern int WAV_SIN_P(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, int iCenterPointOfWave, double dAmplitudeOfWave, double dOffsetOfWave, int iSegmentLength);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WAV_LIN")]       public static extern int WAV_LIN(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, int iNumberOfSpeedUpDownPointsInWave, double dAmplitudeOfWave, double dOffsetOfWave, int iSegmentLength);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WAV_RAMP")]      public static extern int WAV_RAMP(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, int iCenterPointOfWave, int iNumberOfSpeedUpDownPointsInWave, double dAmplitudeOfWave, double dOffsetOfWave, int iSegmentLength);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WAV_PNT")]       public static extern int WAV_PNT(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, double[] dWavePoints);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qWAV")]          public static extern int qWAV(int ID, int[] iWaveTableIdsArray, int[] iParamereIdsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WGO")]           public static extern int WGO(int ID, int[] iWaveGeneratorIdsArray, int[] iStartModArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qWGO")]          public static extern int qWGO(int ID, int[] iWaveGeneratorIdsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WGC")]           public static extern int WGC(int ID, int[] iWaveGeneratorIdsArray, int[] iNumberOfCyclesArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qWGC")]          public static extern int qWGC(int ID, int[] iWaveGeneratorIdsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WSL")]           public static extern int WSL(int ID, int[] iWaveGeneratorIdsArray, int[] iWaveTableIdsArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qWSL")]          public static extern int qWSL(int ID, int[] iWaveGeneratorIdsArray, int[] iWaveTableIdsArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DTC")]           public static extern int DTC(int ID, int[] iDdlTableIdsArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDTL")]          public static extern int qDTL(int ID, int[] iDdlTableIdsArray, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WCL")]           public static extern int WCL(int ID, int[] iWaveTableIdsArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTLT")]          public static extern int qTLT(int ID, int[] iNumberOfDdlTables);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qGWD_SYNC")]     public static extern int qGWD_SYNC(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfValues, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qGWD")]          public static extern int qGWD(int ID, int[] iWaveTableIdsArray, int iNumberOfWaveTables, int iOffset, int nrValues, ref IntPtr dValarray, StringBuilder sGcsArrayHeader, int iGcsArrayHeaderMaxSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WOS")]           public static extern int WOS(int ID, int[] iWaveTableIdsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qWOS")]          public static extern int qWOS(int ID, int[] iWaveTableIdsArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WTR")]           public static extern int WTR(int ID, int[] iWaveGeneratorIdsArray, int[] iTableRateArray, int[] iInterpolationTypeArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qWTR")]          public static extern int qWTR(int ID, int[] iWaveGeneratorIdsArray, int[] iTableRateArray, int[] iInterpolationTypeArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DDL")]           public static extern int DDL(int ID, int iDdlTableId,  int iOffsetOfFirstPointInDdlTable,  int iNumberOfValues, double[] pdValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDDL_SYNC")]     public static extern int qDDL_SYNC(int ID,  int iDdlTableId,  int iOffsetOfFirstPointInDdlTable,  int iNumberOfValues, double[] pdValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDDL")]          public static extern int qDDL(int ID, int[] iDdlTableIdsArray, int iNumberOfDdlTables, int iOffset, int nrValues, ref IntPtr  dValarray, StringBuilder szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DPO")]           public static extern int DPO(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qWMS")]          public static extern int qWMS(int ID, int[] iWaveTableIds, int[] iWaveTableMaimumSize, int iArraySize);



        /////////////////////////////////////////////////////////////////////////////
        // Trigger commands.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_TWC")]           public static extern int TWC(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_TWS")]           public static extern int TWS(int ID, int[] iTriggerChannelIdsArray, int[] piPointNumberArray, int[] piSwitchArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTWS")]          public static extern int qTWS(int ID, int[] iTriggerChannelIdsArray, int iNumberOfTriggerChannels, int iOffset, int nrValues, ref IntPtr dValarray, StringBuilder szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_CTO")]           public static extern int CTO(int ID, int[] iTriggerOutputIdsArray, int[] iTriggerParameterArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qCTO")]          public static extern int qCTO(int ID, int[] iTriggerOutputIdsArray, int[] iTriggerParameterArray, double[] dValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_TRO")]           public static extern int TRO(int ID, long[] iTriggerChannelIds, int[] bTriggerChannelEnabel, long iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTRO")]          public static extern int qTRO(int ID, long[] iTriggerChannelIds, int[] bTriggerChannelEnabel, long iArraySize);


        /////////////////////////////////////////////////////////////////////////////
        // Record tabel commands.
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qHDR")]          public static extern int qHDR(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTNR")]          public static extern int qTNR(int ID, ref int iNumberOfRecordCannels);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DRC")]           public static extern int DRC(int ID, int[] iRecordTableIdsArray, string sRecordSourceIds, int[] iRecordOptionArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDRC")]          public static extern int qDRC(int ID, int[] iRecordTableIdsArray, StringBuilder szRecordSourceIds, int[] iRecordOptionArray, int iRecordSourceIdsBufferSize, int iRecordOptionArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDRR_SYNC")]     public static extern int qDRR_SYNC(int ID,  int iRecordTablelId,  int iOffsetOfFirstPointInRecordTable,  int iNumberOfValues, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDRR")]          public static extern int qDRR(int ID, int[] iRecTableIdsArray, int iNumberOfRecChannels, int iOffsetOfFirstPointInRecordTable, int iNumberOfValues, ref IntPtr dValueArray, StringBuilder sGcsArrayHeader, int iGcsArrayHeaderMaxSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DRT")]           public static extern int DRT(int ID, int[] iRecordChannelIdsArray, int[] iTriggerSourceArray, string sValues, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDRT")]          public static extern int qDRT(int ID, int[] iRecordChannelIdsArray, int[] iTriggerSourceArray, StringBuilder sValues, int iArraySize, int iValueBufferLength);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_RTR")]           public static extern int RTR(int ID, int iReportTableRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qRTR")]          public static extern int qRTR(int ID, ref int iReportTableRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WGR")]           public static extern int WGR(int ID);

